# ProjetoFellows---Rede-Social

projeto-fellows/: pyproject.toml
projeto-fellows/projeto_fellows/: app.py  models.py  views.py
projeto-fellows/projeto_fellows/static/uploads/: script.js
projeto-fellows/projeto_fellows/templates/: cadastro-juridica.html  cadastro.html  fellows.html  login.html
