[tool.poetry]
name = "projeto-fellows"
version = "0.1.0"
description = ""
authors = ["Caio Bertaglia <lemelucas167@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
flask-marshmallow = "^1.2.1"
flask-bcrypt = "^1.0.1"
marshmallow-sqlalchemy = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
